chapter7/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-app
spec:
  hosts:
  - "*"
  gateways:
  - hello-app-gateway
  http:
  - match:
    - uri:
        prefix: /sayHello
    - uri:
        prefix: /sayHello2
    route:
    - destination:
        host: hello-svc
        port:
          number: 8080
